--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="tile">
             <video autoplay muted loop id="background-video">
-                <source src="ecom.mov" type="video/mp4" />Your browser does not support the video tag.
+                <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
             <div class="tile-content">
                 <h3>ecommerce website</h3>
@@ -58,7 +58,7 @@
         </div>
         <div class="tile">
             <video autoplay muted loop id="background-video">
-                <source src="ecom.mov" type="video/mp4" />Your browser does not support the video tag.
+                <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
             <div class="tile-content">
                 <h3>ecommerce website</h3>
@@ -68,7 +68,7 @@
         </div>
         <div class="tile">
             <video autoplay muted loop id="background-video">
-                <source src="ecom.mov" type="video/mp4" />Your browser does not support the video tag.
+                <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
             <div class="tile-content">
                 <h3>ecommerce website</h3>
@@ -78,7 +78,7 @@
         </div>
         <div class="tile">
             <video autoplay muted loop id="background-video">
-                <source src="ecom.mov" type="video/mp4" />Your browser does not support the video tag.
+                <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
             <div class="tile-content">
                 <h3>ecommerce website</h3>
@@ -88,7 +88,7 @@
         </div>
         <div class="tile">
             <video autoplay muted loop id="background-video">
-                <source src="ecom.mov" type="video/mp4" />Your browser does not support the video tag.
+                <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
             <div class="tile-content">
                 <h3>ecommerce website</h3>
