--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
         <div class="tile">
-            <video autoplay muted loop id="background-video">
+            <video autoplay  loop id="background-video">
                 <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
             <div class="tile-content">
