--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Aman</title>
 
 </head>
@@ -338,6 +339,20 @@
 </style>
 
 <style>
+    @media (max-width: 768px) {
+    .intro {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .photo {
+        margin-bottom: 20px;
+    }
+
+    .summary {
+        padding-left: 0;
+    }
+}
     body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -347,7 +362,7 @@
   
   .intro {
       display: flex;
-  
+      
       margin-top: 40px;
       max-width: 100%;
   
