--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="summary">
         <h1>Hello i'm Aman Dhakad</h1>
         <p>WI have a robust academic background in technology and management, reflecting a commitment to both theoretical knowledge and practical application. I am currently pursuing a Master of Science in Information Technology and Management at the Illinois Institute of Technology, where I am enhancing my skills in advanced technology and management principles. My foundational education in Computer Science and Engineering was completed at Rajiv Gandhi Proudyogiki Vishwavidyalaya in India, where I built a solid base in core computing concepts.</p></p>
-        <a href="resume.pdf" class="resume-button">Download my Resume</a>
+        <a href="AMAN_PORTFOLIO/resume.pdf" class="resume-button">Download my Resume</a>
     </div>
 
 
