--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 <style>
     @media (max-width: 768px) {
-    .intro {
+    .intro, .summary, .work-experience {
         flex-direction: column;
         text-align: center;
     }
