--- a/index.html
+++ b/index.html
@@ -339,11 +339,11 @@
 </style>
 
 <style>
-    @media (max-width: 768px) {
+/*     @media (max-width: 768px) {
     .intro, .summary, .work-experience {
         flex-direction: column;
         text-align: center;
-    }
+    } */
 
     .photo {
         margin-bottom: 20px;
@@ -361,6 +361,8 @@
     }
   
   .intro {
+/*             display: grid; */
+      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
       display: flex;
       
       margin-top: 40px;
@@ -442,7 +444,7 @@
   }
   
   .tile {
-      position: relative;
+      position: relative; 
       width: 100%;
       height: 200px;
       overflow: hidden;
