--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
       <div class="certification-item">
           <h3>Google Data Analyst Certificate</h3>
           <p>Issued by Google, this certificate demonstrates proficiency in data analysis, including data cleaning, analysis, and visualization.</p>
+          <a href="https://www.coursera.org/account/accomplishments/professional-cert/VWSYT874MRLT"> 
+              <img src="google_data_analytics.png" alt="google_data_analytics" style="width:50px; height:50px;">
+          </a> 
       </div>
       <!-- Add more certification items here as needed -->
   </div>
