--- a/index.html
+++ b/index.html
@@ -125,31 +125,31 @@
     <div class="work-experience-container">
 
         <div class="year-buttons">
-            <button class="year-button" onclick="showExperience('hiecor', this)">HieCOR Software Technologies</button>
-            <button class="year-button" onclick="showExperience('pep', this)">Pep Coding Education</button>
+            <button class="year-button" onclick="showExperience('pep', this)">Jul 2021 – Dec 2021</button>
+            <button class="year-button" onclick="showExperience('hiecor', this)">Feb 2022 – Nov 2022</button>
+            
         </div>
 
         <div class="experience-list">
-            <div class="experience-item" id="hiecor">
-                <h2>HieCOR Software Technologies</h2>
-                <p><strong>Role:</strong> Software Engineer          <strong>Duration:</strong> Feb 2022 – Nov 2022</p>
-                <ul>
-                    <li>Worked on various front-end, back-end, and database tasks, contributing to multiple projects.</li>
-                    <li>Collaborated with a team of developers to design and implement scalable software solutions.</li>
-                    <li>Developed and maintained full-stack applications using React, Django, and Node.js.</li>
-                    <li>Enhanced overall software performance and optimized processes for better efficiency.</li>
-                    <li>Learned to work in fast-paced environments, effectively communicating with stakeholders to meet project goals.</li>
-                </ul>
-            </div>
+
             <div class="experience-item" id="pep">
-                <h2>Pep Coding Education</h2>
-                <p><strong>Role:</strong> Student Intern          <strong>Duration:</strong> jul 2021 – Dec 2021</p>
+                <h2>Pep Coding Education    <strong>Role:</strong> Student Intern</h2>
                 <ul>
                     <li>Optimized data organization for faster query times and reduced database access latency by 25%.</li>
                     <li>Performed data extraction using ETL processes and SQL scripts, improving data accuracy by 15%.</li>
                     <li>Reduced data processing time by 20% through improved efficiency in data handling.</li>
                     <li>Worked on data-related projects for a website serving over 1,000 students through online courses and live classes.</li>
                     <li>Collaborated with the development team to ensure smooth data flow between systems.</li>
+                </ul>
+            </div>
+                        <div class="experience-item" id="hiecor">
+                <h2>HieCOR Software Technologies      <strong>Role:</strong> Software Engineer</h2>
+                <ul>
+                    <li>Worked on various front-end, back-end, and database tasks, contributing to multiple projects.</li>
+                    <li>Collaborated with a team of developers to design and implement scalable software solutions.</li>
+                    <li>Developed and maintained full-stack applications using React, Django, and Node.js.</li>
+                    <li>Enhanced overall software performance and optimized processes for better efficiency.</li>
+                    <li>Learned to work in fast-paced environments, effectively communicating with stakeholders to meet project goals.</li>
                 </ul>
             </div>
 
