--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="experience-list">
 
             <div class="experience-item" id="pep">
-                <h2>Pep Coding Education    <strong>Role:</strong> Student Intern</h2>
+                <h2>Pep Coding Education    -<strong>Role:</strong> Student Intern</h2>
                 <ul>
                     <li>Optimized data organization for faster query times and reduced database access latency by 25%.</li>
                     <li>Performed data extraction using ETL processes and SQL scripts, improving data accuracy by 15%.</li>
@@ -143,7 +143,7 @@
                 </ul>
             </div>
                         <div class="experience-item" id="hiecor">
-                <h2>HieCOR Software Technologies      <strong>Role:</strong> Software Engineer</h2>
+                <h2>HieCOR Software Technologies      -<strong>Role:</strong> Software Engineer</h2>
                 <ul>
                     <li>Worked on various front-end, back-end, and database tasks, contributing to multiple projects.</li>
                     <li>Collaborated with a team of developers to design and implement scalable software solutions.</li>
