--- a/index.html
+++ b/index.html
@@ -72,9 +72,19 @@
                 <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
             <div class="tile-content">
-                <h3>ecommerce website</h3>
-                <p>Brief description of Product 1.</p>
-                <a href="#" class="buy-button">see code</a>
+                <h3>ecommerce website (Zallany.com)</h3>
+                <p>     </p>
+                <a href="https://github.com/amandhakad4u/E-commerce.git" class="buy-button">see code</a>
+            </div>
+        </div>
+        <div class="tile">
+            <video autoplay muted loop id="background-video">
+                <source src="port.mp4" type="video/mp4" />Your browser does not support the video tag.
+              </video>
+            <div class="tile-content">
+                <h3>Personal Portfolio Website</h3>
+                <p>      </p>
+                <a href="https://amandhakad4u.github.io/AMAN_PORTFOLIO/" class="buy-button">see Project</a>
             </div>
         </div>
         <div class="tile">
@@ -84,7 +94,7 @@
             <div class="tile-content">
                 <h3>ecommerce website</h3>
                 <p>Brief description of Product 1.</p>
-                <a href="#" class="buy-button">see code</a>
+                <a href="https://github.com/amandhakad4u/E-commerce.git" class="buy-button">see code</a>
             </div>
         </div>
         <div class="tile">
@@ -94,7 +104,7 @@
             <div class="tile-content">
                 <h3>ecommerce website</h3>
                 <p>Brief description of Product 1.</p>
-                <a href="#" class="buy-button">see code</a>
+                <a href="https://github.com/amandhakad4u/E-commerce.git" class="buy-button">see code</a>
             </div>
         </div>
         <div class="tile">
@@ -104,17 +114,7 @@
             <div class="tile-content">
                 <h3>ecommerce website</h3>
                 <p>Brief description of Product 1.</p>
-                <a href="#" class="buy-button">see code</a>
-            </div>
-        </div>
-        <div class="tile">
-            <video autoplay muted loop id="background-video">
-                <source src="ecom.mp4" type="video/mp4" />Your browser does not support the video tag.
-              </video>
-            <div class="tile-content">
-                <h3>ecommerce website</h3>
-                <p>Brief description of Product 1.</p>
-                <a href="#" class="buy-button">see code</a>
+                <a href="https://github.com/amandhakad4u/E-commerce.git" class="buy-button">see code</a>
             </div>
         </div>
 
