--- a/index.html
+++ b/index.html
@@ -721,8 +721,8 @@
   }
   
   .skills .tiles-container {
-    display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); /* Adjust size as needed */
+    display: flex;
+      grid-template-columns: repeat(auto-fill, minmax(500px, 1fr)); /* Adjust size as needed */
       gap: 20px;
       padding: 20px;
       justify-content: center;
@@ -732,8 +732,8 @@
       background-color: #1a1a1a;
       padding: 20px;
       text-align: center;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 30px;
+      box-shadow: 0 2px px rgba(0, 0, 0, 0.1);
   } 
   
 
