--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
     text-align: center;
       padding: 20px;
       margin-top: 90px;
-      background-color: #1f1e1e; 
+      background-color: transparent; 
 }
 
 .certifications h2 {
