--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
 }
 
 .certification-item {
-    background: #333;
+    background: transparent;
     padding: 15px;
 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -713,7 +713,7 @@
       text-align: center;
       padding: 20px;
       margin: 20px;
-      background-color: #1f1e1e; 
+      background-color: transparent; 
   }
   
   .skills h2 {
@@ -729,7 +729,7 @@
   }
   
   .skills .tile {
-      background-color: #1a1a1a;
+      background-color: #1f1e1e;
       padding: 20px;
       text-align: center;
       border-radius: 30px;
