--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
         <div class = "page">
             <a href="#about" class="nav-link">About</a>
-            <a href="#skill" class="nav-link">Expertise</a>
+<!--             <a href="#skill" class="nav-link">Expertise</a>
             <a href="#work" class="nav-link">Work</a>
             <a href="#exp" class="nav-link">Experience</a>
             <a href="#blog" class="nav-link">Blog</a>
-            <a href="#con" class="nav-link">Contact</a>
+            <a href="#con" class="nav-link">Contact</a> -->
             <a href="https://www.instagram.com" target="_blank" class="social-icon"> 
                 <i class="fab fa-instagram" ></i>
                 
