--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class = "page">
             <a href="#about" class="nav-link">About</a>
-<!--             <a href="#skill" class="nav-link">Expertise</a>
+            <!-- <a href="#skill" class="nav-link">Expertise</a>
             <a href="#work" class="nav-link">Work</a>
             <a href="#exp" class="nav-link">Experience</a>
             <a href="#blog" class="nav-link">Blog</a>
@@ -218,6 +218,11 @@
 
 
     </div>
+
+    <div class="git">
+        <a href="https://github.com/amandhakad4u" class="buy-button">See More Project &#8594;</a>
+    </div>
+
 </section>
 
 
