--- a/index.html
+++ b/index.html
@@ -86,24 +86,32 @@
     <h2>My Expertise</h2>
     <div class="skill-container">
         <div class="skill-tile">
-            <h3>Front-end</h3>
-            <p>Java, HTML, JavaScript, Node.js, Django, React.js, RESTful API, MySQL, PL/SQL, Oracle, Python, C++</p>
+            <h3>Languages</h3>
+            <p>Python, Java, JavaScript, C++, Golang, Scala, HTML, CSS+</p>
         </div>
         <div class="skill-tile">
-            <h3>Back-end</h3>
-            <p>MS Excel, Data Analysis, Statistical Analysis, ETL, Apache Hadoop, Airflow, Power BI, Azure</p>
+            <h3>Frontend Technologies</h3>
+            <p>React, jQuery, Angular, Tailwind CSS, TypeScript</p>
         </div>
         <div class="skill-tile">
-            <h3>Virsion control</h3>
-            <p>Pandas, NumPy, scikit-learn, TensorFlow, PyTorch, Matplotlib, NLTK, OpenCV</p>
+            <h3>Backend Developmen</h3>
+            <p>Node.js, Django, Flask, RESTful APIs, FastAPI</p>
         </div>
         <div class="skill-tile">
-            <h3>DevOps/Cloud</h3>
-            <p>Jenkins, GitLab CI, Docker, Kubernetes, Git, Agile</p>
+            <h3>Big Data & Databases</h3>
+            <p>SQL, PL/SQL, MySQL, PostgreSQL, Oracle, Hadoop, Apache HBase, MongoDB</p>
         </div>
         <div class="skill-tile">
-            <h3>Data Engineer</h3>
-            <p>System Architecture, Scalability, High Availability, Load Balancing, Database Design, Microservices, API Design, Shell, Performance Optimization, Design Patterns, Distributed Systems, Data Structures, Algorithms</p>
+            <h3>Data Engineering</h3>
+            <p>Apache Kafka, Apache Airflow, Apache Spark, ETL/ELT processes, data transformation</p>
+        </div>
+                <div class="skill-tile">
+            <h3>Cloud & DevOps</h3>
+            <p>AWS, Azure, Docker, Kubernetes, Git, CI/CD</p>
+        </div>
+                <div class="skill-tile">
+            <h3>Software Development Practices</h3>
+            <p>OOP, Design Patterns, Microservices, Agile Methodologies</p>
         </div>
     </div>
 </section>
