--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
 
     </div>
 
-
-        <a href="https://github.com/amandhakad4u" class="git">See More Project &#8594;</a>
-
+        <div class ="git">
+        <a href="https://github.com/amandhakad4u" class="buy-button">See More Project &#8594;</a>
+        </div>
 
 </section>
 
