--- a/index.html
+++ b/index.html
@@ -86,32 +86,24 @@
     <h2>My Expertise</h2>
     <div class="skill-container">
         <div class="skill-tile">
-            <h3>Languages</h3>
-            <p>Python, Java, JavaScript, C++, Golang, Scala, HTML, CSS+</p>
+            <h3>Front-end</h3>
+            <p>Java, HTML, JavaScript, Node.js, Django, React.js, RESTful API, MySQL, PL/SQL, Oracle, Python, C++</p>
         </div>
         <div class="skill-tile">
-            <h3>Frontend Technologies</h3>
-            <p>React, jQuery, Angular, Tailwind CSS, TypeScript</p>
+            <h3>Back-end</h3>
+            <p>MS Excel, Data Analysis, Statistical Analysis, ETL, Apache Hadoop, Airflow, Power BI, Azure</p>
         </div>
         <div class="skill-tile">
-            <h3>Backend Developmen</h3>
-            <p>Node.js, Django, Flask, RESTful APIs, FastAPI</p>
+            <h3>Virsion control</h3>
+            <p>Pandas, NumPy, scikit-learn, TensorFlow, PyTorch, Matplotlib, NLTK, OpenCV</p>
         </div>
         <div class="skill-tile">
-            <h3>Big Data & Databases</h3>
-            <p>SQL, PL/SQL, MySQL, PostgreSQL, Oracle, Hadoop, Apache HBase, MongoDB</p>
+            <h3>DevOps/Cloud</h3>
+            <p>Jenkins, GitLab CI, Docker, Kubernetes, Git, Agile</p>
         </div>
         <div class="skill-tile">
-            <h3>Data Engineering</h3>
-            <p>Apache Kafka, Apache Airflow, Apache Spark, ETL/ELT processes, data transformation</p>
-        </div>
-                <div class="skill-tile">
-            <h3>Cloud & DevOps</h3>
-            <p>AWS, Azure, Docker, Kubernetes, Git, CI/CD</p>
-        </div>
-                <div class="skill-tile">
-            <h3>Software Development Practices</h3>
-            <p>OOP, Design Patterns, Microservices, Agile Methodologies</p>
+            <h3>Data Engineer</h3>
+            <p>System Architecture, Scalability, High Availability, Load Balancing, Database Design, Microservices, API Design, Shell, Performance Optimization, Design Patterns, Distributed Systems, Data Structures, Algorithms</p>
         </div>
     </div>
 </section>
@@ -227,9 +219,9 @@
 
     </div>
 
-        <div class ="git">
+    <div class="git">
         <a href="https://github.com/amandhakad4u" class="buy-button">See More Project &#8594;</a>
-        </div>
+    </div>
 
 </section>
 
@@ -242,14 +234,14 @@
     <h3 class="section-heading">Work Experience</h3>
     <div class="work-container">
         <div class="experience">
-            <button class="toggle-button">&#8595     Jan/2023 - Present | Illinois Tech</button>
+            <button class="toggle-button">&#8595        Illinois Tech      |      Jan/2023 - -Present</button>
             <div class="details">
                 <h3>Grad Student</h3>
                 <p></p>
             </div>
         </div>
         <div class="experience">
-            <button class="toggle-button">&#8595     Feb/2022 – Nov/2022 |HieCOR Software Technologies</button>
+            <button class="toggle-button">&#8595        HieCOR Software Technologies      |      Feb/2022 – Nov/2022</button>
             <div class="details">
                 <h3>Software Engineer</h3>
                 <p>• Developed dynamic user interfaces with React, boosting user engagement by 30%, while building server-side applications using
@@ -262,7 +254,7 @@
             </div>
         </div>
         <div class="experience">
-            <button class="toggle-button">&#8595     July/2021 – Dec/2021 | Pepcoding</button>
+            <button class="toggle-button">&#8595        Pepcoding      |      July/2021 – Dec/2021</button>
             <div class="details">
                 <h3>Student intern</h3>
                 
@@ -281,7 +273,7 @@
 </section>
 
 
- 
+
 
 
 <section class="certifications">
