--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
             <h3>Data Engineer</h3>
             <p>System Architecture, Scalability, High Availability, Load Balancing, Database Design, Microservices, API Design, Shell, Performance Optimization, Design Patterns, Distributed Systems, Data Structures, Algorithms</p>
         </div>
+                <div class="skill-tile">
+            <h3>Machine Learning</h3>
+            <p>PyTorch, TensorFlow, Keras, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn, OpenCV, Hugging Face Transformers, Streamlit, Anaconda, Visual Studio Code, R.</p>
+        </div>
     </div>
 </section>
 
