--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 
     </div>
 
-    <div class="git">
-        <a href="https://github.com/amandhakad4u" class="buy-button">See More Project &#8594;</a>
-    </div>
+
+        <a href="https://github.com/amandhakad4u" class="git">See More Project &#8594;</a>
+
 
 </section>
 
@@ -238,14 +238,14 @@
     <h3 class="section-heading">Work Experience</h3>
     <div class="work-container">
         <div class="experience">
-            <button class="toggle-button">&#8595        Illinois Tech      |      Jan/2023 - -Present</button>
+            <button class="toggle-button">&#8595   Jan/2023 - Present   | Illinois Tech</button>
             <div class="details">
                 <h3>Grad Student</h3>
                 <p></p>
             </div>
         </div>
         <div class="experience">
-            <button class="toggle-button">&#8595        HieCOR Software Technologies      |      Feb/2022 – Nov/2022</button>
+            <button class="toggle-button">&#8595   Feb/2022 – Nov/2022   |   HieCOR Software Technologies</button>
             <div class="details">
                 <h3>Software Engineer</h3>
                 <p>• Developed dynamic user interfaces with React, boosting user engagement by 30%, while building server-side applications using
@@ -258,7 +258,7 @@
             </div>
         </div>
         <div class="experience">
-            <button class="toggle-button">&#8595        Pepcoding      |      July/2021 – Dec/2021</button>
+            <button class="toggle-button">&#8595   July/2021 – Dec/2021   |   Pepcoding</button>
             <div class="details">
                 <h3>Student intern</h3>
                 
