--- a/index.html
+++ b/index.html
@@ -164,16 +164,16 @@
 
 
             <video autoplay muted loop id="background-video">
-                <source src="port.mp4" type="video/mp4" />Your browser does not support the video tag.
+                <source src="bitcoint.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
 
             <div class="see">
-                <a href="https://amandhakad4u.github.io/AMAN_PORTFOLIO/" class="buy-button">see Project &#8594;</a>
+                <a href="https://github.com/amandhakad4u/BITCOIN-PREDICTION-USING-MACHINE-LEARNING.git" class="buy-button">see Project &#8594;</a>
             </div>
 
         </div>
         <h3>Portfolio Project</h3>
-        <p>This project showcases my portfolio with a collection of my works and achievements.</p>
+        <p>Applied data mining techniques to analyze historical trends, improving Bitcoin price predictions with an RMSE of 172, using Pandas, NumPy, and time series forecasting for strategic decision-making.</p>
     
     </div> 
     <div class="project">  
