--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
 
         </div>
-        <h3>Price predic(on system</h3>
+        <h3>Price predictions system</h3>
         <p>Applied data mining techniques to analyze historical trends, improving Bitcoin price predictions with an RMSE of 172, using Pandas, NumPy, and time series forecasting for strategic decision-making.</p>
     
     </div> 
