--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         <div class="contact-info">
             <div class="contact-item">
                 <i class="fas fa-map-marker-alt"></i>
-                <p><a href="https://www.google.com/maps?q=1234+Elm+Street,+Springfield,+IL,+62704" target="_blank">1234 Elm Street, Springfield, IL, 62704</a></p>
+                <p><a href="https://www.google.com/maps?q=1234+Elm+Street,+Springfield,+IL,+62704" target="_blank">2852 s kings dr, Chicago, IL, 60616</a></p>
             </div>
             <div class="contact-item">
                 <i class="fas fa-envelope"></i>
