--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="skill-container">
         <div class="skill-tile">
             <h3>Programming Languages:</h3>
-            <p>Java, C++, C#, JavaScript, TypeScript, Ruby, Go, Swift, Kotlin, SQL, NoSQL.</p>
+            <p>HTML, CSS, JavaScript, MySQL, Pl/SQL, Python, Bash scripting, C++, C#.</p>
         </div>
         <div class="skill-tile">
             <h3>Front-end:</h3>
@@ -100,12 +100,20 @@
         </div>
         <div class="skill-tile">
             <h3>Database Technologies:</h3>
-            <p>Apache Hadoop, Apache Spark, Apache Kafka, Hive, Pig, Flink, Relational Databases (MySQL, PostgreSQL, SQL Server, Oracle DB), NoSQL Databases (MongoDB, Cassandra, DynamoDB, HBase), Columnar Databases (Redshift, Snowflake, BigQuery), AWS (Redshift, S3, Glue, EMR), Azure (Data Factory, Synapse Analytics), Google Cloud (BigQuery, Dataflow, Cloud Storage), Batch Processing, Stream Processing, Real-Time Data Pipelines, Data Transformation.</p>
+            <p>MySQL, PostgreSQL, MongoDB, DynamoDB, Apache spark</p>
         </div>
         <div class="skill-tile">
             <h3>DevOps/Cloud</h3>
             <p>Git, GitHub, GitLab, Bitbucket, Bash, PowerShell, Agile/Scrum Methodologies, Site Reliability Engineering (SRE), Blue-Green Deployments, A/B Testing, Disaster Recovery Planning.</p>
         </div>
+        <div class="skill-tile">
+            <h3>Machine Learning and AI</h3>
+            <p>Supervised Unsupervised Learning, Reinforcement, Neural Networks, NLP</p>
+        </div>
+        <div class="skill-tile">
+            <h3>DevOps and cloud</h3>
+            <p>CI/CD, Docker, Kubernetes, Git, Agile, MLflow, AWS (EC2, S3, RDS, ECS), Azure.</p>
+        </div>       
     </div>
 </section>
 
