--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 
             <video autoplay muted loop id="background-video">
-                <source src="bitcoint.mp4" type="video/mp4" />Your browser does not support the video tag.
+                <source src="bitcoin.mp4" type="video/mp4" />Your browser does not support the video tag.
               </video>
 
             <div class="see">
