--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
     <div class="work-container">
 
         <div class="experience">
-            <button class="toggle-button">&#8595   Jan/2023 - Dec/2024   | Illinois Tech</button>
+            <button class="toggle-button">&#8595   Jan/2023 - Dec/2024   | MS-ITM @ Illinois Tech</button>
             <div class="details">
                 <h3>Grad Student</h3>
                 <p></p>
             </div>
         </div>
         <div class="experience">
-            <button class="toggle-button">&#8595   Feb/2022 – Nov/2022   |   HieCOR Software Technologies</button>
+            <button class="toggle-button">&#8595   Feb/2022 – Nov/2022   | SOFTWARE ENGINEER  HieCOR Software Technologies</button>
             <div class="details">
                 <h3>Software Engineer</h3>
                 <p>• Developed dynamic user interfaces with React, boosting user engagement by 30%, while building server-side applications using
@@ -263,7 +263,7 @@
             </div>
         </div>
         <div class="experience">
-            <button class="toggle-button">&#8595   July/2021 – Dec/2021   |   Pepcoding</button>
+            <button class="toggle-button">&#8595   July/2021 – Dec/2021   |  SOFTWARE ENGINEERING INTERN Pepcoding</button>
             <div class="details">
                 <h3>Student intern</h3>
                 
