--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
 
         </div>
-        <h3>Zallany.com</h3>
+        <h3>ECommerce</h3>
         <p>An eCommerce website developed with Django, MySQL, HTML, CSS, and JavaScript, featuring responsive design, user authentication, and product and order management</p>
     
     </div> 
@@ -253,13 +253,17 @@
             <button class="toggle-button">&#8595   Feb/2022 – Nov/2022   | SOFTWARE ENGINEER  HieCOR Software Technologies</button>
             <div class="details">
                 <h3>Software Engineer</h3>
-                <p>• Developed dynamic user interfaces with React, boosting user engagement by 30%, while building server-side applications using
-                    Node.js and Express, improving API response times by 25% and enhancing data processing efficiency.
-                    <br><br>• Created RESTful APIs in Django, facilitating secure data exchange between the front-end and back-end systems, improving
-                    application scalability and integration capabilities.
-                    <br><br>• Optimized SQL database queries, reducing data retrieval times by 25% and increasing overall database efficiency.
-                    <br><br>• Participated in Agile sprints and used JIRA for tracking, contributing to a 20% reduction in project delivery time. Managed code
-                    with Git, ensuring collaboration and maintaining quality within a team of 5 engineers.</p>
+                <p>
+                • Developed and maintained backend microservices using Java (Spring Boot), handling user data, metrics, and core platform features for thousands of users, by designing modular services, implementing clean code, and integrating unit and integration tests.
+                <br><br>
+                • Built and optimized REST APIs for mobile and web applications, reducing response time by 20% and improving reliability by analyzing endpoints, validating requests/responses, and implementing caching and proper error handling.
+                <br><br>
+                • Implemented real-time data pipelines using Kafka to process high-volume health and activity events, ensuring fault-tolerant ingestion and low-latency processing by setting up topic partitioning, consumer groups, and robust error-handling mechanisms.
+                <br><br>
+                • Designed PostgreSQL schemas and optimized queries to support analytics and reporting, improving database performance by 25% by analyzing access patterns, creating indexes, and tuning complex joins.
+                <br><br>
+                • Deployed and managed services on AWS (ECS, RDS, Lambda, S3, CloudWatch) with CI/CD pipelines (GitHub Actions, Docker), reducing deployment errors and downtime by 30%, by automating builds, tests, and monitoring, and using Terraform for infrastructure-as-code.
+                </p>
             </div>
         </div>
         <div class="experience">
